notes in md file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <div class="main">
+        <div class="main-heading">
+            <h1>Vending Machine v2</h1>
+        </div>
+        <div class="menu">
+
+        </div>
+        <div class="order">
+            
+        </div>
+        <div class="button">
+
+        </div>
+    </div>
 </body>
 <script src="./js/index.js"></script>
 </html>
