--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vending Machine v2</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="icon" href="./img/vending-machine.png" />
 </head>
 <body>
     <div class="main">
@@ -13,7 +14,10 @@
             <h1>Vending Machine v2</h1>
         </div>
         <div class="menu">
-
+            <ul id="list" type="none"></ul>
+            <table>
+                
+            </table>
         </div>
         <div class="order">
             
