--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         </div>
         <div class="menu">
             <ul id="list" type="none"></ul>
-            <table>
-                
+            <table id = 'table'>
             </table>
         </div>
         <div class="order">
